AppInmobiliaria/force-app/main/default/objects/Opportunity/fields/Agency_Fee_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Agency_Fee_Percentage__c</fullName>
    <label>Agency Fee (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>