AppInmobiliaria/force-app/main/default/objects/Opportunity/fields/Agency_Profit__c.field-meta.xml
<CustomField>
    <fullName>Agency_Profit__c</fullName>
    <formula>Amount * Agency_Fee_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>