AppInmobiliaria/force-app/main/default/objects/Opportunity/fields/Bathrooms__c.field-meta.xml
<CustomField>
    <fullName>Bathrooms__c</fullName>
    <formula>Property_Unit__r.Bathrooms__c</formula>
    <label>Property Bathrooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>