AppInmobiliaria/force-app/main/default/objects/Opportunity/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>TEXT(Property_Unit__r.Property__r.City__c)</formula>
    <label>City</label>
    <type>Text</type>
</CustomField>