AppInmobiliaria/force-app/main/default/objects/Opportunity/fields/Fecha_Caducidad_Encargo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Caducidad_Encargo__c</fullName>
    <label>Fecha Caducidad Encargo</label>
    <type>Date</type>
</CustomField>