AppInmobiliaria/force-app/main/default/objects/Opportunity/fields/Ganancia_Agencia__c.field-meta.xml
<CustomField>
    <fullName>Ganancia_Agencia__c</fullName>
    <formula>Amount * Honorarios_Agencia__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ganancia de la Agencia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>