AppInmobiliaria/force-app/main/default/objects/Opportunity/fields/Habitaciones_Inmueble__c.field-meta.xml
<CustomField>
    <fullName>Habitaciones_Inmueble__c</fullName>
    <formula>Inmueble_Asociado__r.Habitaciones__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Habitaciones (Inmueble)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>