AppInmobiliaria/force-app/main/default/objects/Opportunity/fields/Has_Elevator__c.field-meta.xml
<CustomField>
    <fullName>Has_Elevator__c</fullName>
    <formula>Property_Unit__r.Property__r.Has_Elevator__c</formula>
    <label>Property Has Elevator</label>
    <type>Checkbox</type>
</CustomField>