AppInmobiliaria/force-app/main/default/objects/Opportunity/fields/Honorarios_Agencia__c.field-meta.xml
<CustomField>
    <fullName>Honorarios_Agencia__c</fullName>
    <label>Honorarios de Agencia (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>