AppInmobiliaria/force-app/main/default/objects/Opportunity/fields/Inmueble_Asociado__c.field-meta.xml
<CustomField>
    <fullName>Inmueble_Asociado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inmueble Asociado</label>
    <referenceTo>Inmueble__c</referenceTo>
    <relationshipLabel>Encargos (Oportunidades)</relationshipLabel>
    <relationshipName>Encargos</relationshipName>
    <type>Lookup</type>
</CustomField>