AppInmobiliaria/force-app/main/default/objects/Opportunity/fields/Listing_Reference__c.field-meta.xml
<CustomField>
    <fullName>Listing_Reference__c</fullName>
    <displayFormat>LST-{00000}</displayFormat>
    <label>Listing Reference</label>
    <type>AutoNumber</type>
</CustomField>