AppInmobiliaria/force-app/main/default/objects/Opportunity/fields/Metros_Cuadrados_Inmueble__c.field-meta.xml
<CustomField>
    <fullName>Metros_Cuadrados_Inmueble__c</fullName>
    <formula>Inmueble_Asociado__r.Metros_Cuadrados__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Metros Cuadrados (Inmueble)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>