AppInmobiliaria/force-app/main/default/objects/Opportunity/fields/Minimum_Accepted_Price__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Accepted_Price__c</fullName>
    <label>Minimum Accepted Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>