AppInmobiliaria/force-app/main/default/objects/Opportunity/fields/Neighborhood__c.field-meta.xml
<CustomField>
    <fullName>Neighborhood__c</fullName>
    <formula>TEXT(Property_Unit__r.Property__r.Neighborhood__c)</formula>
    <label>Neighborhood</label>
    <type>Text</type>
</CustomField>