AppInmobiliaria/force-app/main/default/objects/Opportunity/fields/Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>Operation_Type__c</fullName>
    <label>Operation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Venta</fullName>
                <default>true</default>
                <label>Venta</label>
            </value>
            <value>
                <fullName>Alquiler</fullName>
            </value>
            <value>
                <fullName>Traspaso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>