AppInmobiliaria/force-app/main/default/objects/Opportunity/fields/Pending_Matches__c.field-meta.xml
<CustomField>
    <fullName>Pending_Matches__c</fullName>
    <label>Pending Property Matches</label>
    <summaryFilterItems>
        <field>Property_Match__c.Match_Status__c</field>
        <operation>equals</operation>
        <value>Nueva Sugerencia</value>
    </summaryFilterItems>
    <summaryForeignKey>Property_Match__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>