AppInmobiliaria/force-app/main/default/objects/Opportunity/fields/Precio_Salida__c.field-meta.xml
<CustomField>
    <fullName>Precio_Salida__c</fullName>
    <label>Precio de Salida</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>