AppInmobiliaria/force-app/main/default/objects/Opportunity/fields/Property_Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>Property_Bedrooms__c</fullName>
    <formula>Property_Unit__r.Bedrooms__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Bedrooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>