AppInmobiliaria/force-app/main/default/objects/Opportunity/fields/Property_Square_Meters__c.field-meta.xml
<CustomField>
    <fullName>Property_Square_Meters__c</fullName>
    <formula>Property_Unit__r.Square_Meters__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Square Meters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>