AppInmobiliaria/force-app/main/default/objects/Opportunity/fields/Property_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Property_State_Province__c</fullName>
    <formula>TEXT(Property_Unit__r.Property__r.State_Province__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property State/Province</label>
    <type>Text</type>
</CustomField>