AppInmobiliaria/force-app/main/default/objects/Opportunity/fields/Tipo_Operacion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Operacion__c</fullName>
    <label>Tipo de Operación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Venta</fullName>
                <default>true</default>
                <label>Venta</label>
            </value>
            <value>
                <fullName>Alquiler</fullName>
            </value>
            <value>
                <fullName>Traspaso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>