AppInmobiliaria/force-app/main/default/objects/Opportunity/fields/Total_Matches__c.field-meta.xml
<CustomField>
    <fullName>Total_Matches__c</fullName>
    <label>Total Property Matches</label>
    <summaryForeignKey>Property_Match__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>