AppInmobiliaria/force-app/main/default/objects/Opportunity/recordTypes/Encargo_Inmobiliario.recordType-meta.xml
<RecordType>
    <fullName>Encargo_Inmobiliario</fullName>
    <active>true</active>
    <businessProcess>Proceso_Inmobiliario</businessProcess>
    <label>Encargo Inmobiliario</label>
</RecordType>