AppInmobiliaria/force-app/main/default/objects/Opportunity/recordTypes/Property_Listing.recordType-meta.xml
<RecordType>
    <fullName>Property_Listing</fullName>
    <active>true</active>
    <businessProcess>Property Listing Process</businessProcess>
    <label>Property Listing</label>
</RecordType>