AppInmobiliaria/force-app/main/default/objects/Opportunity/listViews/Todas.listView-meta.xml
<ListView>
    <fullName>Todas</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Inmueble_Asociado__c</columns>
    <columns>Tipo_Operacion__c</columns>
    <columns>Precio_Salida__c</columns>
    <columns>Precio_Minimo_Aceptado__c</columns>
    <columns>Honorarios_Agencia__c</columns>
    <columns>Fecha_Caducidad_Encargo__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todas</label>
</ListView>